findbugs: use valueOf instead of number constructor
findbugs code:
Bx: Method invokes inefficient Number constructor; use static valueOf instead

Change-Id: If77d88f1862d2e75871b28695f7d8631eb30cc91
Signed-off-by: Shahar Havivi <shavivi@redhat.com>